<resources>
    <string name="app_name">testBottomNavigation</string>
    <string name="title_home">首頁</string>
    <string name="title_reward">紅利</string>
    <string name="title_store">好康</string>
    <string name="title_signin">登錄</string>
    <string name="title_my">我的</string>

    <!-- ============ 首頁 ============ -->
    <string name="home_exchange_history">兌換紀錄</string>
    <string name="home_card_title_bp">紅利點數</string>
    <string name="home_card_title_co">多利金</string>
    <string name="home_card_title_am">里程數</string>
    <string name="home_card_title_ev">哩程數</string>
    <string name="home_card_title_empty"></string>
</resources>
