<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_reward"
        android:icon="@drawable/ic_reward"
        android:title="@string/title_reward" />

    <item
        android:id="@+id/navigation_store"
        android:icon="@drawable/ic_store"
        android:title="@string/title_store" />

    <item
        android:id="@+id/navigation_signin"
        android:icon="@drawable/ic_signin"
        android:title="@string/title_signin" />

    <item
        android:id="@+id/navigation_my"
        android:icon="@drawable/ic_my"
        android:title="@string/title_my" />
</menu>
